<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProjetosActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobarProjetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:navigationIcon="@drawable/ic_voltar"
        app:title="@string/toobar_projetos"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/logo_barbearia"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/projeto_barbearia"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/toobarProjetos"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_barbearia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projeto01"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/logo_barbearia"
        app:layout_constraintBottom_toTopOf="@id/btn_barbearia"
        app:layout_constraintStart_toEndOf="@id/logo_barbearia"/>

    <Button
        android:id="@+id/btn_barbearia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_marginStart="20dp"
        android:text="@string/btn_Projeto"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="32dp"
        app:layout_constraintStart_toEndOf="@id/logo_barbearia"
        app:layout_constraintTop_toBottomOf="@id/txt_barbearia"
        app:layout_constraintBottom_toBottomOf="@id/logo_barbearia"/>

    <ImageView
        android:id="@+id/logo_pizzaria"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/projeto_pizzaria"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo_barbearia"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_pizzaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projeto02"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/logo_pizzaria"
        app:layout_constraintBottom_toTopOf="@id/btn_pizzaria"
        app:layout_constraintStart_toEndOf="@id/logo_pizzaria"/>

    <Button
        android:id="@+id/btn_pizzaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_marginStart="20dp"
        android:text="@string/btn_Projeto"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="32dp"
        app:layout_constraintStart_toEndOf="@id/logo_pizzaria"
        app:layout_constraintTop_toBottomOf="@id/txt_pizzaria"
        app:layout_constraintBottom_toBottomOf="@id/logo_pizzaria"/>

    <ImageView
        android:id="@+id/logo_marcenaria"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/projeto_marcenaria"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo_pizzaria"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_marcenaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projeto03"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/logo_marcenaria"
        app:layout_constraintBottom_toTopOf="@id/btn_marcenaria"
        app:layout_constraintStart_toEndOf="@id/logo_marcenaria"/>

    <Button
        android:id="@+id/btn_marcenaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_marginStart="20dp"
        android:text="@string/btn_Projeto"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="32dp"
        app:layout_constraintStart_toEndOf="@id/logo_marcenaria"
        app:layout_constraintTop_toBottomOf="@id/txt_marcenaria"
        app:layout_constraintBottom_toBottomOf="@id/logo_marcenaria"/>

</androidx.constraintlayout.widget.ConstraintLayout>