<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ContatoActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobarContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        app:navigationIcon="@drawable/ic_voltar"
        app:title="@string/toobar_contato"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/logo_phone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_phone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/toobarContato"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato_phone"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/logo_phone"
        app:layout_constraintBottom_toBottomOf="@id/logo_phone"
        app:layout_constraintStart_toEndOf="@id/logo_phone"/>

    <ImageView
        android:id="@+id/logo_mail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo_phone"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato_mail"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/logo_mail"
        app:layout_constraintBottom_toBottomOf="@id/logo_mail"
        app:layout_constraintStart_toEndOf="@id/logo_mail"/>


    <ImageView
        android:id="@+id/btn_whats"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo_whatsapp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>